--- a/daikoku/javascript/src/style/components/fastMode.scss
+++ b/daikoku/javascript/src/style/components/fastMode.scss
@@ -1,12 +1,12 @@
-@import '../variables.scss';
+@use '../variables.scss';
 /* fast cards*/
 .fast__hover:hover {
-  background-color: $companion_text-hover-bg-color;
-  color: $companion_text-hover-color;
+  background-color: variables.$companion_text-hover-bg-color;
+  color: variables.$companion_text-hover-color;
 }
 
 .explain__text {
-  border: 1px solid $level1_text-color;
+  border: 1px solid variables.$level1_text-color;
   padding: 10px;
   border-radius: 4px;
   text-align: justify;
