--- a/daikoku/javascript/src/style/main.scss
+++ b/daikoku/javascript/src/style/main.scss
@@ -1,44 +1,44 @@
-@import 'variables';
+@use 'variables';
 
-@import 'layout/home';
-@import 'layout/style';
-@import 'layout/sidebar';
-@import 'layout/navbar';
-@import 'layout/login';
-@import 'layout/footer.scss';
-@import 'layout/rightPanel.scss';
+@use 'layout/home';
+@use 'layout/style';
+@use 'layout/sidebar';
+@use 'layout/navbar';
+@use 'layout/login';
+@use 'layout/footer.scss';
+@use 'layout/rightPanel.scss';
 
-@import "components/antCalandar";
-@import 'components/avatarWithAction';
-@import 'components/apicard';
-@import 'components/badge';
-@import 'components/btn';
-@import 'components/form';
-@import 'components/modal';
-@import 'components/note';
-@import 'components/notification';
-@import 'components/pagination';
-@import 'components/popover';
-@import 'components/reactTable';
-@import 'components/tiles';
-@import 'components/toastr';
-@import 'components/input';
-@import 'components/backOffice.scss';
-@import 'components/switch.scss';
-@import 'components/consumptions.scss';
-@import 'swagger';
-@import "components/recharts.scss";
-@import 'components/discussion.scss';
-@import 'components/messages.scss';
-@import 'components/breadcrumb.scss';
-@import 'components/dragAndDropDoc.scss';
-@import 'components/fastMode.scss';
-@import 'components/reactSelect.scss';
-@import 'components/sortable.scss';
-@import 'components/redoc.scss';
-@import 'components/teamBilling';
-@import 'components/navDocumentation';
-@import 'components/swagger';
-@import 'components/tabs';
-@import 'components/apiSubscription.scss';
-@import 'components/pricingCard.scss';
+@use "components/antCalandar";
+@use 'components/avatarWithAction';
+@use 'components/apicard';
+@use 'components/badge';
+@use 'components/btn';
+@use 'components/form';
+@use 'components/modal';
+@use 'components/note';
+@use 'components/notification';
+@use 'components/pagination';
+@use 'components/popover';
+@use 'components/reactTable';
+@use 'components/tiles';
+@use 'components/toastr';
+@use 'components/input';
+@use 'components/backOffice.scss';
+@use 'components/switch.scss';
+@use 'components/consumptions.scss';
+@use 'swagger';
+@use "components/recharts.scss";
+@use 'components/discussion.scss';
+@use 'components/messages.scss';
+@use 'components/breadcrumb.scss';
+@use 'components/dragAndDropDoc.scss';
+@use 'components/fastMode.scss';
+@use 'components/reactSelect.scss';
+@use 'components/sortable.scss';
+@use 'components/redoc.scss';
+@use 'components/teamBilling';
+@use 'components/navDocumentation';
+@use 'components/swagger' as swagger2;
+@use 'components/tabs';
+@use 'components/apiSubscription.scss';
+@use 'components/pricingCard.scss';
