--- a/daikoku/javascript/src/style/components/breadcrumb.scss
+++ b/daikoku/javascript/src/style/components/breadcrumb.scss
@@ -1,7 +1,9 @@
+@use "../variables";
+
 .steps {
   padding-left: 24px;
   font-weight: 500;
-  color: $sidebar-text-color;
+  color: variables.$sidebar-text-color;
 
   .step {
     margin-bottom: 8px;
@@ -10,7 +12,7 @@
 
     &::after {
       content: '';
-      background: $level3_bg-color;
+      background: variables.$level3_bg-color;
       top: 6px;
       position: absolute;
       left: -24px;
@@ -28,7 +30,7 @@
         margin-top: 22px;
         width: 1px;
         height: 18px;
-        background: $level3_bg-color;
+        background: variables.$level3_bg-color;
       }
 
     }
@@ -37,17 +39,17 @@
 
       &::after {
         transform: scale(1.3);
-        background-color: $info-color;
+        background-color: variables.$info-color;
       }
     }
 
     &.finished {
       &::after {
-        background-color: $info-color;
+        background-color: variables.$info-color;
       }
 
       &::before {
-        background: $info-color;
+        background: variables.$info-color;
       }
     }
 
@@ -63,20 +65,20 @@
 .ant-steps {
   .ant-steps-item {
     .ant-steps-item-title{
-      color: $level2_text-color !important;
+      color: variables.$level2_text-color !important;
 
     }
     .ant-steps-item-tail::after{
-      background-color: $level2_text-color !important;
+      background-color: variables.$level2_text-color !important;
 
     }
 
     .ant-steps-item-container {
-      color: $level2_text-color;
+      color: variables.$level2_text-color;
 
       .ant-steps-item-icon {
         .ant-steps-icon-dot {
-          background: $info-color;
+          background: variables.$info-color;
         }
       }
     }
@@ -84,7 +86,7 @@
     &.ant-steps-item-disabled {
       .ant-steps-item-icon {
         .ant-steps-icon-dot {
-          background: $level3_bg-color;
+          background: variables.$level3_bg-color;
         }
       }
     }
