--- a/daikoku/javascript/src/style/components/discussion.scss
+++ b/daikoku/javascript/src/style/components/discussion.scss
@@ -1,3 +1,6 @@
+@use "sass:color";
+@use "../variables";
+
 .messages-sender-container{
   height: calc(100vh - 160px);
   overflow: scroll;
@@ -29,7 +32,7 @@
     overflow: hidden;
 
     .discussion-header {
-      background: $info-color;
+      background: variables.$info-color;
       color: #fff;
       padding: 5px 10px;
       width: 100%;
@@ -44,17 +47,17 @@
       flex-direction: column-reverse;
       max-height: 250px;
       overflow-y: scroll;
-      border: 1px solid $info-color;
+      border: 1px solid variables.$info-color;
     }
   }
 
   .discussion-form {
     width: 100%;
-    border: 1px solid $info-color;
+    border: 1px solid variables.$info-color;
     display: flex;
     flex-direction: row;
     padding: 10px;
-    background: $level2_bg-color;
+    background: variables.$level2_bg-color;
     border-bottom-right-radius: 4px;
     border-bottom-left-radius: 4px;
     &__message{
@@ -63,7 +66,7 @@
       bottom: 10px;
       margin-left: -10px ;
       border:none;
-      border-top: 1px solid $sidebar-bg-color;
+      border-top: 1px solid variables.$sidebar-bg-color;
     }
   }
 
@@ -81,17 +84,17 @@
       width: 70px;
       border: none;
       cursor: pointer;
-      background-color:  $level2_bg-color;
-      color: $info-color;
+      background-color:  variables.$level2_bg-color;
+      color: variables.$info-color;
       outline: none;
       &:hover {
-        color: lighten(dodgerblue, $amount: 20) ;
+        color: color.adjust(dodgerblue, $lightness: 20%) ;
       }
     }
   }
 
   .discussion-btn {
-    background: $info-color;
+    background: variables.$info-color;
     width: 60px; height: 60px;
     border: 1px solid #fff;
     border-radius: 30px;
@@ -179,7 +182,7 @@
 
   .delete-link {
   width: 50px;
-  color: $level2_link-color;
+  color: variables.$level2_link-color;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -188,6 +191,6 @@
 }
 
 .delete-link:hover {
-  color: $level2_link-hover-color;
+  color: variables.$level2_link-hover-color;
   text-decoration: none;
 }
