--- a/daikoku/javascript/src/style/components/form.scss
+++ b/daikoku/javascript/src/style/components/form.scss
@@ -1,8 +1,10 @@
+@use "../variables";
+
 .form-control,
 .form-control:focus {
-  background-color: $form-bg-color;
-  color: $form-text-color;
-  border-color: $form-border-color;
+  background-color: variables.$form-bg-color;
+  color: variables.$form-text-color;
+  border-color: variables.$form-border-color;
 }
 
 .form-control:disabled,
