--- a/daikoku/javascript/src/style/components/pagination.scss
+++ b/daikoku/javascript/src/style/components/pagination.scss
@@ -1,3 +1,5 @@
+@use "../variables";
+
 .pagination {
   display: flex;
   flex-direction: row;
@@ -8,7 +10,7 @@
   margin-top: 16px;
 
   li, li:not(.next,.previous) a {
-    color:$level2_link-color;
+    color:variables.$level2_link-color;
   }
 
   li.page-selector {
@@ -18,23 +20,23 @@
     align-items: center;
     justify-content: center;
     transition: color .35s ease-in-out;
-    border: 1px solid $level3_bg-color;
+    border: 1px solid variables.$level3_bg-color;
     margin-left: -1px;
-    color:$level2_link-color;
+    color:variables.$level2_link-color;
     &:hover {
-      color:$level2_link-hover-color;
+      color:variables.$level2_link-hover-color;
       cursor: pointer;
     }
 
     &.active {
-      background-color: $level3_bg-color;
+      background-color: variables.$level3_bg-color;
       a {
-        color:$level3_link-color;
+        color:variables.$level3_link-color;
       }
     }
 
     a {
-      color:$level2_link-color;
+      color:variables.$level2_link-color;
       display: flex;
       width: 100%;
       height: 100%;
@@ -49,7 +51,7 @@
 
   li.next, li.previous {
     padding: 0.5rem;
-    border: 1px solid $level3_bg-color;
+    border: 1px solid variables.$level3_bg-color;
     min-width: 30px;
         height: 30px;
     cursor: pointer;
@@ -57,9 +59,9 @@
     align-items: center;
     justify-content: center;
     a {
-      color:$level2_link-color;
+      color:variables.$level2_link-color;
       &:hover {
-        color:$level2_link-hover-color;
+        color:variables.$level2_link-hover-color;
       }
     }
     &.disabled {
