--- a/daikoku/javascript/src/style/components/sortable.scss
+++ b/daikoku/javascript/src/style/components/sortable.scss
@@ -1,3 +1,5 @@
+@use "../variables";
+
 .sortable-list {
   display: flex;
   flex-direction: row;
@@ -114,11 +116,11 @@
   }
 
   &.over {
-    box-shadow: inset $level3_bg-color 0 0 0 3px, rgba(201, 211, 219, 0.5) 20px 14px 24px;
+    box-shadow: inset variables.$level3_bg-color 0 0 0 3px, rgba(201, 211, 219, 0.5) 20px 14px 24px;
 
     >svg {
       opacity: 1;
-      color: $level3_bg-color;
+      color: variables.$level3_bg-color;
     }
 
     &.dropped {
@@ -157,7 +159,7 @@
 //**************
 
 .validation-step__type {
-  border: 2px solid $level3_bg-color;
+  border: 2px solid variables.$level3_bg-color;
   position: absolute;
   display: flex;
   justify-content: center;
@@ -167,12 +169,12 @@
   width: 36px;
   height: 36px;
   border-radius: 50%;
-  background-color: $level3_bg-color;
-  color: $level3_text-color
+  background-color: variables.$level3_bg-color;
+  color: variables.$level3_text-color
 }
 
 .sortable-item {
-  border: 2px solid $level3_bg-color;
+  border: 2px solid variables.$level3_bg-color;
   height: 200px;
   width: 120px
 }
