--- a/daikoku/javascript/src/style/components/teamBilling.scss
+++ b/daikoku/javascript/src/style/components/teamBilling.scss
@@ -1,4 +1,4 @@
-@import "../variables.scss";
+@use "../variables.scss";
 
 .month__and__total {
   width: 100%;
@@ -13,8 +13,8 @@
   display: flex;
   justify-content: space-between;
   //border: 1px solid #bbc9d8;
-  background-color: $level3_bg-color;
-  color: $level3_text-color;
+  background-color: variables.$level3_bg-color;
+  color: variables.$level3_text-color;
   .title__container__bloc {
     display: flex;
     align-items: center;
@@ -42,7 +42,7 @@
 
   .api__billing__card {
     cursor: pointer;
-    background-color: $level3_bg-color;
+    background-color: variables.$level3_bg-color;
     //border: 1px solid #e8e8e8;
     padding: 10px;
     width: 160px;
@@ -57,13 +57,13 @@
 
 .currency__total {
   font-size: 24px;
-  color: $level3_text-color;
+  color: variables.$level3_text-color;
   margin-left: 8px;
 }
 
 .currency {
   font-size: 24px;
-  color: $level3_text-color;
+  color: variables.$level3_text-color;
 
   .unit {
     margin-left: 10px;
@@ -88,7 +88,7 @@
 
   .price__cartridge__total {
     font-size: 18px;
-    color: $level3_text-color;
+    color: variables.$level3_text-color;
   }
 }
 
@@ -96,7 +96,7 @@
   text-align: center;
   margin-top: 40px;
   .api-plans-consumptions {
-    background-color: $level3_bg-color;
+    background-color: variables.$level3_bg-color;
   }
   @media screen and (max-width: 768px) {
     position: absolute;
@@ -113,7 +113,7 @@
     display: flex;
     justify-content: space-between;
     font-size: 20px;
-    color: $level3_text-color;
+    color: variables.$level3_text-color;
     padding: 15px 5px;
 
     i.quit {
