--- a/daikoku/javascript/src/style/layout/footer.scss
+++ b/daikoku/javascript/src/style/layout/footer.scss
@@ -1,9 +1,11 @@
+@use "../variables";
+
 .footer {
   min-height: 60px;
   // margin-top: 35px;
   bottom: 0;
 
   font-size: 18px;
-  background: $footer-bg-color;
-  color:$footer-text-color;
+  background: variables.$footer-bg-color;
+  color:variables.$footer-text-color;
 }
